--- a/math.css
+++ b/math.css
@@ -109,6 +109,7 @@ a:hover, a.active{
     flex: 1;
     background: linear-gradient(rgb(219, 54, 42), rgb(4, 4, 150));
     border-radius: 10px;
+    height: 300px;
 }
 #introduction h3{
     font-weight: normal;
